tests/NormalTests/paczka1/fuzzy1/96134024.err
Error in line 3: S274 S965 69,5
Error in line 2: 0IQI1DEBB A9 54,1
Error in line 22: PtNn S274 24,27
Error in line 33: JXDLNE7KXo S965 4,0
Error in line 36: 0IQI1DEBB A296 38,2
